# rust_Yew_practice

./: Cargo.toml  Trunk.toml  index.html
src/: main.rs
